Refactored deployment to the complexity of the conversational interface between the ear builder and the module builders Decoupled the main deployer from XmlBeans Ear module builders are almost decoupled from XmlBeans, although all module builders use xml beans internally in the future they will not be forced to
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@47239 13f79535-47bb-0310-9956-ffa450edef68